# feedback-descent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/svg/rubrics/: anatomical_realism.yaml  ink_wash.yaml  minimalist.yaml  retro_arcade.yaml  stained_glass.yaml
configs/svg/subjects/: city_skyline.yaml  mushroom.yaml  robot.yaml  unicorn.yaml
src/feedback_descent/cli/: main.py
src/feedback_descent/config/: loader.py
src/feedback_descent/core/: loop.py  protocols.py  types.py
src/feedback_descent/domains/: __init__.py  base.py
src/feedback_descent/domains/svg/: __init__.py  evaluator.py  parser.py  prompts.py  proposer.py  renderer.py
src/feedback_descent/llm/: client.py
src/feedback_descent/logging/: run_tracker.py  trajectory.py
tests/: test_loop.py  test_svg_evaluator.py  test_svg_parser.py
