[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feedback-descent"
version = "0.1.0"
description = "Open-ended text optimization via pairwise comparison feedback"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [{name = "Jared Joselowitz"}]
keywords = ["llm", "optimization", "feedback", "pairwise-comparison", "text-optimization"]

[project.urls]
Homepage = "https://github.com/JaredJoss/feedback-descent"
Repository = "https://github.com/JaredJoss/feedback-descent"
Issues = "https://github.com/JaredJoss/feedback-descent/issues"
dependencies = [
    "litellm>=1.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "resvg-py>=0.2.6",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
feedback-descent = "feedback_descent.cli.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
